cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir0 SHARED ${SRC_FILES} )
add_subdirectory(dir1)
add_subdirectory(dir94)
set_source_files_properties(file217.cpp PROPERTIES COMPILE_FLAGS -Dfile217)

set_source_files_properties(file218.cpp PROPERTIES COMPILE_FLAGS -Dfile218)

set_source_files_properties(file219.cpp PROPERTIES COMPILE_FLAGS -Dfile219)

set_source_files_properties(file220.cpp PROPERTIES COMPILE_FLAGS -Dfile220)

set_source_files_properties(file221.cpp PROPERTIES COMPILE_FLAGS -Dfile221)

set_source_files_properties(file222.cpp PROPERTIES COMPILE_FLAGS -Dfile222)

set_source_files_properties(file223.cpp PROPERTIES COMPILE_FLAGS -Dfile223)

set_source_files_properties(file224.cpp PROPERTIES COMPILE_FLAGS -Dfile224)

set_source_files_properties(file225.cpp PROPERTIES COMPILE_FLAGS -Dfile225)

set_source_files_properties(file226.cpp PROPERTIES COMPILE_FLAGS -Dfile226)

set_source_files_properties(file227.cpp PROPERTIES COMPILE_FLAGS -Dfile227)

set_source_files_properties(file228.cpp PROPERTIES COMPILE_FLAGS -Dfile228)

set_source_files_properties(file229.cpp PROPERTIES COMPILE_FLAGS -Dfile229)

set_source_files_properties(file230.cpp PROPERTIES COMPILE_FLAGS -Dfile230)

set_source_files_properties(file231.cpp PROPERTIES COMPILE_FLAGS -Dfile231)

set_source_files_properties(file232.cpp PROPERTIES COMPILE_FLAGS -Dfile232)

set_source_files_properties(file233.cpp PROPERTIES COMPILE_FLAGS -Dfile233)

set_source_files_properties(file234.cpp PROPERTIES COMPILE_FLAGS -Dfile234)

set_source_files_properties(file235.cpp PROPERTIES COMPILE_FLAGS -Dfile235)

set_source_files_properties(file236.cpp PROPERTIES COMPILE_FLAGS -Dfile236)

set_source_files_properties(file237.cpp PROPERTIES COMPILE_FLAGS -Dfile237)

set_source_files_properties(file238.cpp PROPERTIES COMPILE_FLAGS -Dfile238)

set_source_files_properties(file239.cpp PROPERTIES COMPILE_FLAGS -Dfile239)

set_source_files_properties(file240.cpp PROPERTIES COMPILE_FLAGS -Dfile240)

set_source_files_properties(file241.cpp PROPERTIES COMPILE_FLAGS -Dfile241)

set_source_files_properties(file242.cpp PROPERTIES COMPILE_FLAGS -Dfile242)

set_source_files_properties(file243.cpp PROPERTIES COMPILE_FLAGS -Dfile243)

set_source_files_properties(file244.cpp PROPERTIES COMPILE_FLAGS -Dfile244)

set_source_files_properties(file245.cpp PROPERTIES COMPILE_FLAGS -Dfile245)

set_source_files_properties(file246.cpp PROPERTIES COMPILE_FLAGS -Dfile246)

set_source_files_properties(file247.cpp PROPERTIES COMPILE_FLAGS -Dfile247)

set_source_files_properties(file248.cpp PROPERTIES COMPILE_FLAGS -Dfile248)

set_source_files_properties(file249.cpp PROPERTIES COMPILE_FLAGS -Dfile249)

set_source_files_properties(file250.cpp PROPERTIES COMPILE_FLAGS -Dfile250)

set_source_files_properties(file251.cpp PROPERTIES COMPILE_FLAGS -Dfile251)

set_source_files_properties(file252.cpp PROPERTIES COMPILE_FLAGS -Dfile252)

set_source_files_properties(file253.cpp PROPERTIES COMPILE_FLAGS -Dfile253)

set_source_files_properties(file254.cpp PROPERTIES COMPILE_FLAGS -Dfile254)

set_source_files_properties(file255.cpp PROPERTIES COMPILE_FLAGS -Dfile255)

set_source_files_properties(file256.cpp PROPERTIES COMPILE_FLAGS -Dfile256)

set_source_files_properties(file257.cpp PROPERTIES COMPILE_FLAGS -Dfile257)

set_source_files_properties(file258.cpp PROPERTIES COMPILE_FLAGS -Dfile258)

set_source_files_properties(file259.cpp PROPERTIES COMPILE_FLAGS -Dfile259)

set_source_files_properties(file260.cpp PROPERTIES COMPILE_FLAGS -Dfile260)

set_source_files_properties(file261.cpp PROPERTIES COMPILE_FLAGS -Dfile261)

set_source_files_properties(file262.cpp PROPERTIES COMPILE_FLAGS -Dfile262)

set_source_files_properties(file263.cpp PROPERTIES COMPILE_FLAGS -Dfile263)

set_source_files_properties(file264.cpp PROPERTIES COMPILE_FLAGS -Dfile264)

set_source_files_properties(file265.cpp PROPERTIES COMPILE_FLAGS -Dfile265)

set_source_files_properties(file266.cpp PROPERTIES COMPILE_FLAGS -Dfile266)

set_source_files_properties(file267.cpp PROPERTIES COMPILE_FLAGS -Dfile267)

set_source_files_properties(file268.cpp PROPERTIES COMPILE_FLAGS -Dfile268)

set_source_files_properties(file269.cpp PROPERTIES COMPILE_FLAGS -Dfile269)

set_source_files_properties(file270.cpp PROPERTIES COMPILE_FLAGS -Dfile270)

set_source_files_properties(file271.cpp PROPERTIES COMPILE_FLAGS -Dfile271)

set_source_files_properties(file272.cpp PROPERTIES COMPILE_FLAGS -Dfile272)

set_source_files_properties(file273.cpp PROPERTIES COMPILE_FLAGS -Dfile273)

set_source_files_properties(file274.cpp PROPERTIES COMPILE_FLAGS -Dfile274)

set_source_files_properties(file275.cpp PROPERTIES COMPILE_FLAGS -Dfile275)

set_source_files_properties(file276.cpp PROPERTIES COMPILE_FLAGS -Dfile276)

set_source_files_properties(file277.cpp PROPERTIES COMPILE_FLAGS -Dfile277)

set_source_files_properties(file278.cpp PROPERTIES COMPILE_FLAGS -Dfile278)

set_source_files_properties(file279.cpp PROPERTIES COMPILE_FLAGS -Dfile279)

set_source_files_properties(file280.cpp PROPERTIES COMPILE_FLAGS -Dfile280)

set_source_files_properties(file281.cpp PROPERTIES COMPILE_FLAGS -Dfile281)

set_source_files_properties(file282.cpp PROPERTIES COMPILE_FLAGS -Dfile282)

set_source_files_properties(file283.cpp PROPERTIES COMPILE_FLAGS -Dfile283)

set_source_files_properties(file284.cpp PROPERTIES COMPILE_FLAGS -Dfile284)

set_source_files_properties(file285.cpp PROPERTIES COMPILE_FLAGS -Dfile285)

set_source_files_properties(file286.cpp PROPERTIES COMPILE_FLAGS -Dfile286)

set_source_files_properties(file287.cpp PROPERTIES COMPILE_FLAGS -Dfile287)

set_source_files_properties(file288.cpp PROPERTIES COMPILE_FLAGS -Dfile288)

set_source_files_properties(file289.cpp PROPERTIES COMPILE_FLAGS -Dfile289)

set_source_files_properties(file290.cpp PROPERTIES COMPILE_FLAGS -Dfile290)

set_source_files_properties(file291.cpp PROPERTIES COMPILE_FLAGS -Dfile291)

set_source_files_properties(file292.cpp PROPERTIES COMPILE_FLAGS -Dfile292)

set_source_files_properties(file293.cpp PROPERTIES COMPILE_FLAGS -Dfile293)

set_source_files_properties(file294.cpp PROPERTIES COMPILE_FLAGS -Dfile294)

set_source_files_properties(file295.cpp PROPERTIES COMPILE_FLAGS -Dfile295)

set_source_files_properties(file296.cpp PROPERTIES COMPILE_FLAGS -Dfile296)

set_source_files_properties(file297.cpp PROPERTIES COMPILE_FLAGS -Dfile297)

set_source_files_properties(file298.cpp PROPERTIES COMPILE_FLAGS -Dfile298)

set_source_files_properties(file299.cpp PROPERTIES COMPILE_FLAGS -Dfile299)

set_source_files_properties(file300.cpp PROPERTIES COMPILE_FLAGS -Dfile300)

set_source_files_properties(file301.cpp PROPERTIES COMPILE_FLAGS -Dfile301)

set_source_files_properties(file302.cpp PROPERTIES COMPILE_FLAGS -Dfile302)

set_source_files_properties(file303.cpp PROPERTIES COMPILE_FLAGS -Dfile303)

set_source_files_properties(file304.cpp PROPERTIES COMPILE_FLAGS -Dfile304)

set_source_files_properties(file305.cpp PROPERTIES COMPILE_FLAGS -Dfile305)

set_source_files_properties(file306.cpp PROPERTIES COMPILE_FLAGS -Dfile306)

set_source_files_properties(file307.cpp PROPERTIES COMPILE_FLAGS -Dfile307)

set_source_files_properties(file308.cpp PROPERTIES COMPILE_FLAGS -Dfile308)

set_source_files_properties(file309.cpp PROPERTIES COMPILE_FLAGS -Dfile309)

set_source_files_properties(file310.cpp PROPERTIES COMPILE_FLAGS -Dfile310)

set_source_files_properties(file311.cpp PROPERTIES COMPILE_FLAGS -Dfile311)

set_source_files_properties(file312.cpp PROPERTIES COMPILE_FLAGS -Dfile312)

set_source_files_properties(file313.cpp PROPERTIES COMPILE_FLAGS -Dfile313)

set_source_files_properties(file314.cpp PROPERTIES COMPILE_FLAGS -Dfile314)

set_source_files_properties(file315.cpp PROPERTIES COMPILE_FLAGS -Dfile315)

set_source_files_properties(file316.cpp PROPERTIES COMPILE_FLAGS -Dfile316)

set_source_files_properties(file317.cpp PROPERTIES COMPILE_FLAGS -Dfile317)

set_source_files_properties(file318.cpp PROPERTIES COMPILE_FLAGS -Dfile318)

set_source_files_properties(file319.cpp PROPERTIES COMPILE_FLAGS -Dfile319)

set_source_files_properties(file320.cpp PROPERTIES COMPILE_FLAGS -Dfile320)

set_source_files_properties(file321.cpp PROPERTIES COMPILE_FLAGS -Dfile321)

set_source_files_properties(file322.cpp PROPERTIES COMPILE_FLAGS -Dfile322)

set_source_files_properties(file323.cpp PROPERTIES COMPILE_FLAGS -Dfile323)

set_source_files_properties(file324.cpp PROPERTIES COMPILE_FLAGS -Dfile324)

set_source_files_properties(file325.cpp PROPERTIES COMPILE_FLAGS -Dfile325)

set_source_files_properties(file326.cpp PROPERTIES COMPILE_FLAGS -Dfile326)

set_source_files_properties(file327.cpp PROPERTIES COMPILE_FLAGS -Dfile327)

set_source_files_properties(file328.cpp PROPERTIES COMPILE_FLAGS -Dfile328)

set_source_files_properties(file329.cpp PROPERTIES COMPILE_FLAGS -Dfile329)

set_source_files_properties(file330.cpp PROPERTIES COMPILE_FLAGS -Dfile330)

set_source_files_properties(file331.cpp PROPERTIES COMPILE_FLAGS -Dfile331)

set_source_files_properties(file332.cpp PROPERTIES COMPILE_FLAGS -Dfile332)

set_source_files_properties(file333.cpp PROPERTIES COMPILE_FLAGS -Dfile333)

set_source_files_properties(file334.cpp PROPERTIES COMPILE_FLAGS -Dfile334)

set_source_files_properties(file335.cpp PROPERTIES COMPILE_FLAGS -Dfile335)

set_source_files_properties(file336.cpp PROPERTIES COMPILE_FLAGS -Dfile336)

set_source_files_properties(file337.cpp PROPERTIES COMPILE_FLAGS -Dfile337)

set_source_files_properties(file338.cpp PROPERTIES COMPILE_FLAGS -Dfile338)

set_source_files_properties(file339.cpp PROPERTIES COMPILE_FLAGS -Dfile339)

set_source_files_properties(file340.cpp PROPERTIES COMPILE_FLAGS -Dfile340)

set_source_files_properties(file341.cpp PROPERTIES COMPILE_FLAGS -Dfile341)

set_source_files_properties(file342.cpp PROPERTIES COMPILE_FLAGS -Dfile342)

set_source_files_properties(file343.cpp PROPERTIES COMPILE_FLAGS -Dfile343)

set_source_files_properties(file344.cpp PROPERTIES COMPILE_FLAGS -Dfile344)

set_source_files_properties(file345.cpp PROPERTIES COMPILE_FLAGS -Dfile345)

set_source_files_properties(file346.cpp PROPERTIES COMPILE_FLAGS -Dfile346)

set_source_files_properties(file347.cpp PROPERTIES COMPILE_FLAGS -Dfile347)

set_source_files_properties(file348.cpp PROPERTIES COMPILE_FLAGS -Dfile348)

set_source_files_properties(file349.cpp PROPERTIES COMPILE_FLAGS -Dfile349)

set_source_files_properties(file350.cpp PROPERTIES COMPILE_FLAGS -Dfile350)

set_source_files_properties(file351.cpp PROPERTIES COMPILE_FLAGS -Dfile351)

set_source_files_properties(file352.cpp PROPERTIES COMPILE_FLAGS -Dfile352)

set_source_files_properties(file353.cpp PROPERTIES COMPILE_FLAGS -Dfile353)

set_source_files_properties(file354.cpp PROPERTIES COMPILE_FLAGS -Dfile354)

set_source_files_properties(file355.cpp PROPERTIES COMPILE_FLAGS -Dfile355)

set_source_files_properties(file356.cpp PROPERTIES COMPILE_FLAGS -Dfile356)

set_source_files_properties(file357.cpp PROPERTIES COMPILE_FLAGS -Dfile357)

set_source_files_properties(file358.cpp PROPERTIES COMPILE_FLAGS -Dfile358)

set_source_files_properties(file359.cpp PROPERTIES COMPILE_FLAGS -Dfile359)

set_source_files_properties(file360.cpp PROPERTIES COMPILE_FLAGS -Dfile360)

set_source_files_properties(file361.cpp PROPERTIES COMPILE_FLAGS -Dfile361)

set_source_files_properties(file362.cpp PROPERTIES COMPILE_FLAGS -Dfile362)

set_source_files_properties(file363.cpp PROPERTIES COMPILE_FLAGS -Dfile363)

set_source_files_properties(file364.cpp PROPERTIES COMPILE_FLAGS -Dfile364)

set_source_files_properties(file365.cpp PROPERTIES COMPILE_FLAGS -Dfile365)

set_source_files_properties(file366.cpp PROPERTIES COMPILE_FLAGS -Dfile366)

set_source_files_properties(file367.cpp PROPERTIES COMPILE_FLAGS -Dfile367)

set_source_files_properties(file368.cpp PROPERTIES COMPILE_FLAGS -Dfile368)

set_source_files_properties(file369.cpp PROPERTIES COMPILE_FLAGS -Dfile369)

set_source_files_properties(file370.cpp PROPERTIES COMPILE_FLAGS -Dfile370)

set_source_files_properties(file371.cpp PROPERTIES COMPILE_FLAGS -Dfile371)

set_source_files_properties(file372.cpp PROPERTIES COMPILE_FLAGS -Dfile372)

set_source_files_properties(file373.cpp PROPERTIES COMPILE_FLAGS -Dfile373)

set_source_files_properties(file374.cpp PROPERTIES COMPILE_FLAGS -Dfile374)

set_source_files_properties(file375.cpp PROPERTIES COMPILE_FLAGS -Dfile375)

set_source_files_properties(file376.cpp PROPERTIES COMPILE_FLAGS -Dfile376)

set_source_files_properties(file377.cpp PROPERTIES COMPILE_FLAGS -Dfile377)

set_source_files_properties(file378.cpp PROPERTIES COMPILE_FLAGS -Dfile378)

set_source_files_properties(file379.cpp PROPERTIES COMPILE_FLAGS -Dfile379)

set_source_files_properties(file380.cpp PROPERTIES COMPILE_FLAGS -Dfile380)

set_source_files_properties(file381.cpp PROPERTIES COMPILE_FLAGS -Dfile381)

set_source_files_properties(file382.cpp PROPERTIES COMPILE_FLAGS -Dfile382)

set_source_files_properties(file383.cpp PROPERTIES COMPILE_FLAGS -Dfile383)

set_source_files_properties(file384.cpp PROPERTIES COMPILE_FLAGS -Dfile384)
