cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir35201 SHARED ${SRC_FILES} )
set_source_files_properties(file35202.cpp PROPERTIES COMPILE_FLAGS -Dfile35202)

set_source_files_properties(file35203.cpp PROPERTIES COMPILE_FLAGS -Dfile35203)

set_source_files_properties(file35204.cpp PROPERTIES COMPILE_FLAGS -Dfile35204)

set_source_files_properties(file35205.cpp PROPERTIES COMPILE_FLAGS -Dfile35205)

set_source_files_properties(file35206.cpp PROPERTIES COMPILE_FLAGS -Dfile35206)

set_source_files_properties(file35207.cpp PROPERTIES COMPILE_FLAGS -Dfile35207)

set_source_files_properties(file35208.cpp PROPERTIES COMPILE_FLAGS -Dfile35208)

set_source_files_properties(file35209.cpp PROPERTIES COMPILE_FLAGS -Dfile35209)

set_source_files_properties(file35210.cpp PROPERTIES COMPILE_FLAGS -Dfile35210)

set_source_files_properties(file35211.cpp PROPERTIES COMPILE_FLAGS -Dfile35211)

set_source_files_properties(file35212.cpp PROPERTIES COMPILE_FLAGS -Dfile35212)

set_source_files_properties(file35213.cpp PROPERTIES COMPILE_FLAGS -Dfile35213)

set_source_files_properties(file35214.cpp PROPERTIES COMPILE_FLAGS -Dfile35214)

set_source_files_properties(file35215.cpp PROPERTIES COMPILE_FLAGS -Dfile35215)

set_source_files_properties(file35216.cpp PROPERTIES COMPILE_FLAGS -Dfile35216)

set_source_files_properties(file35217.cpp PROPERTIES COMPILE_FLAGS -Dfile35217)

set_source_files_properties(file35218.cpp PROPERTIES COMPILE_FLAGS -Dfile35218)

set_source_files_properties(file35219.cpp PROPERTIES COMPILE_FLAGS -Dfile35219)

set_source_files_properties(file35220.cpp PROPERTIES COMPILE_FLAGS -Dfile35220)

set_source_files_properties(file35221.cpp PROPERTIES COMPILE_FLAGS -Dfile35221)

set_source_files_properties(file35222.cpp PROPERTIES COMPILE_FLAGS -Dfile35222)

set_source_files_properties(file35223.cpp PROPERTIES COMPILE_FLAGS -Dfile35223)

set_source_files_properties(file35224.cpp PROPERTIES COMPILE_FLAGS -Dfile35224)

set_source_files_properties(file35225.cpp PROPERTIES COMPILE_FLAGS -Dfile35225)

set_source_files_properties(file35226.cpp PROPERTIES COMPILE_FLAGS -Dfile35226)

set_source_files_properties(file35227.cpp PROPERTIES COMPILE_FLAGS -Dfile35227)

set_source_files_properties(file35228.cpp PROPERTIES COMPILE_FLAGS -Dfile35228)

set_source_files_properties(file35229.cpp PROPERTIES COMPILE_FLAGS -Dfile35229)

set_source_files_properties(file35230.cpp PROPERTIES COMPILE_FLAGS -Dfile35230)

set_source_files_properties(file35231.cpp PROPERTIES COMPILE_FLAGS -Dfile35231)

set_source_files_properties(file35232.cpp PROPERTIES COMPILE_FLAGS -Dfile35232)

set_source_files_properties(file35233.cpp PROPERTIES COMPILE_FLAGS -Dfile35233)

set_source_files_properties(file35234.cpp PROPERTIES COMPILE_FLAGS -Dfile35234)

set_source_files_properties(file35235.cpp PROPERTIES COMPILE_FLAGS -Dfile35235)

set_source_files_properties(file35236.cpp PROPERTIES COMPILE_FLAGS -Dfile35236)

set_source_files_properties(file35237.cpp PROPERTIES COMPILE_FLAGS -Dfile35237)

set_source_files_properties(file35238.cpp PROPERTIES COMPILE_FLAGS -Dfile35238)

set_source_files_properties(file35239.cpp PROPERTIES COMPILE_FLAGS -Dfile35239)

set_source_files_properties(file35240.cpp PROPERTIES COMPILE_FLAGS -Dfile35240)

set_source_files_properties(file35241.cpp PROPERTIES COMPILE_FLAGS -Dfile35241)

set_source_files_properties(file35242.cpp PROPERTIES COMPILE_FLAGS -Dfile35242)

set_source_files_properties(file35243.cpp PROPERTIES COMPILE_FLAGS -Dfile35243)

set_source_files_properties(file35244.cpp PROPERTIES COMPILE_FLAGS -Dfile35244)

set_source_files_properties(file35245.cpp PROPERTIES COMPILE_FLAGS -Dfile35245)

set_source_files_properties(file35246.cpp PROPERTIES COMPILE_FLAGS -Dfile35246)

set_source_files_properties(file35247.cpp PROPERTIES COMPILE_FLAGS -Dfile35247)

set_source_files_properties(file35248.cpp PROPERTIES COMPILE_FLAGS -Dfile35248)

set_source_files_properties(file35249.cpp PROPERTIES COMPILE_FLAGS -Dfile35249)

set_source_files_properties(file35250.cpp PROPERTIES COMPILE_FLAGS -Dfile35250)
